tests/algorithms/x/PHP/electronics/real_and_reactive_power.error
run: exit status 255

Fatal error: Cannot redeclare function sqrt() in /workspace/mochi/tests/algorithms/x/PHP/electronics/real_and_reactive_power.php on line 19
